--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   url_launcher: ^6.3.0
   provider: ^6.1.2
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
