--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   url_launcher: ^6.3.0
   provider: ^6.1.2
   image_picker: ^1.1.2
+  google_generative_ai: ^0.4.6
+  file_picker: ^8.1.4
 
 dev_dependencies:
   flutter_test:
