--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   image_picker: ^1.1.2
   google_generative_ai: ^0.4.6
   file_picker: ^8.1.4
+  flutter_dotenv: ^5.2.1
+
 
 dev_dependencies:
   flutter_test:
