--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_generative_ai: ^0.4.6
   file_picker: ^8.1.4
   flutter_dotenv: ^5.2.1
+  device_preview: ^1.2.0
 
 
 dev_dependencies:
